apps/homebridge/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: homebridge
  name: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: homebridge
    spec:
      containers:
        - name: homebridge
          image: ghcr.io/oznu/homebridge:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8581
              protocol: TCP
          volumeMounts:
            - name: homebridge-data
              mountPath: /data
            - name: homebridge-config
              mountPath: /homebridge/startup.sh
              subPath: startup.sh
      hostNetwork: true
      volumes:
        - name: homebridge-data
          persistentVolumeClaim:
            claimName: homebridge-data
        - name: homebridge-config
          configMap:
            name: homebridge-config
            defaultMode: 0755
