apps/homebridge/template/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-homebridge
spec:
  ingressClassName: nginx
  rules:
    - host: homebridge.picturo.us
      paths:
        - path: /
          pathType: Prefix
